script/k8s/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      # 修改三个port
      port: 6380
      targetPort: 6379
      nodePort: 31379
  type: NodePort
