script/k8s/k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  selector:
    app: webook
  ports:
    - protocol: TCP
      # 修改port和targetPort
      port: 80
      targetPort: 8081
  # 修改type
  type: LoadBalancer
