script/k8s/k8s-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
            # 修改path
          - path: /
            pathType: Prefix
            backend:
              service:
                # 修改name
                name: webook
                port:
                  number: 80
      # 添加host
      host: practice.webook.com
